--- a/create_prototype/edit_student.html
+++ b/create_prototype/edit_student.html
@@ -69,7 +69,7 @@
                                                 <input type="text" class="form-control" id="father" value="Minh">
                                                 <div>
                                                     <!--                                                    <small style="color: red">Tên không được để trống</small>-->
-                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái</small>
+                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái.</small>
                                                 </div>
                                             </div>
                                             <div class="form-group col-md-6">
@@ -80,7 +80,7 @@
                                                 <input type="text" class="form-control" id="mother"
                                                        placeholder="Nguyễn Văn C">
                                                 <div>
-                                                    <small style="color: red">Tên không được để trống</small>
+                                                    <small style="color: red">Tên không được để trống.</small>
                                                     <!--                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái</small>-->
                                                 </div>
                                             </div>
@@ -95,7 +95,7 @@
                                                 <div>
                                                     <small style="color: red">Số điện thoại phải bắt đầu từ 090,091
                                                         (VD:090XXXXXX, X có 6 số từ
-                                                        0 đến 9)
+                                                        0 đến 9).
                                                     </small>
                                                     <!--                                                    <small style="color: red">-->
                                                     <!--                                                        Số điện thoại không được để trống-->
@@ -125,7 +125,7 @@
                                                             style="color: red">*</span> : </label>
                                                 <input type="text" class="form-control" id="nation" placeholder="Kinh">
                                                 <div>
-                                                    <small style="color: red">Dân tộc không được để trống</small>
+                                                    <small style="color: red">Dân tộc không được để trống.</small>
                                                 </div>
                                             </div>
                                         </div>
