--- a/create_prototype/create_student.html
+++ b/create_prototype/create_student.html
@@ -51,8 +51,8 @@
                                                 <input type="text" class="form-control" id="name"
                                                        placeholder="Nguyễn Văn A">
                                                 <div>
-                                                    <small style="color: red">Tên không được để trống</small>
-                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái</small>
+                                                    <small style="color: red">Tên không được để trống.</small>
+                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái.</small>
                                                 </div>
                                             </div>
                                             <div class="form-group col-md-6">
@@ -71,8 +71,8 @@
                                                 <input type="text" class="form-control" id="father"
                                                        placeholder="Nguyễn Văn B">
                                                 <div>
-                                                    <small style="color: red">Tên không được để trống</small>
-                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái</small>
+                                                    <small style="color: red">Tên không được để trống.</small>
+                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái.</small>
                                                 </div>
                                             </div>
                                             <div class="form-group col-md-6">
@@ -83,8 +83,8 @@
                                                 <input type="text" class="form-control" id="mother"
                                                        placeholder="Nguyễn Văn C">
                                                 <div>
-                                                    <small style="color: red">Tên không được để trống</small>
-                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái</small>
+                                                    <small style="color: red">Tên không được để trống.</small>
+                                                    <small style="color: red">Tên phải nhiều hơn 5 chữ cái.</small>
                                                 </div>
                                             </div>
                                         </div>
@@ -99,7 +99,7 @@
                                                 <div>
                                                     <small style="color: red">Số điện thoại phải bắt đầu từ 090,091
                                                         (VD:090XXXXXX, X có 6 số từ
-                                                        0 đến 9)</small>
+                                                        0 đến 9).</small>
                                                 </div>
                                             </div>
                                             <div class="form-group col-md-6">
@@ -117,7 +117,7 @@
                                                 <input type="text" class="form-control" id="country"
                                                        placeholder="Đà Nẵng">
                                                 <div>
-                                                    <small style="color: red">Quê quán không được để trống</small>
+                                                    <small style="color: red">Quê quán không được để trống.</small>
                                                 </div>
                                             </div>
                                             <div class="form-group col-md-6">
@@ -126,7 +126,7 @@
                                                             style="color: red">*</span> : </label>
                                                 <input type="text" class="form-control" id="nation" placeholder="Kinh">
                                                 <div>
-                                                    <small style="color: red">Dân tộc không được để trống</small>
+                                                    <small style="color: red">Dân tộc không được để trống.</small>
                                                 </div>
                                             </div>
                                         </div>
